--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,6 @@
 .gitignore
 .git/
-.version
+run*.sh
 Jenkinsfile
-README.md
-# Do not include this, it is installed by the RPM.
+# Do not include this, it is installed by the RPM - Never should need to run in the container.
 init/
