Refactored the conman config in preperation for merging with the refactored NCN addressing

--- a/docs/conman.conf.example
+++ b/docs/conman.conf.example
@@ -266,16 +266,16 @@ SERVER timestamp=1h
 GLOBAL seropts="115200,8n1"
 GLOBAL log="conman/console.%N"
 GLOBAL logopts="sanitize,timestamp"
-console name="uan01-mgmt"     dev="ipmi:10.254.2.26" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="nid000001-mgmt" dev="ipmi:10.254.2.6" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="nid000002-mgmt" dev="ipmi:10.254.2.3" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="nid000003-mgmt" dev="ipmi:10.254.2.20" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="nid000004-mgmt" dev="ipmi:10.254.2.19" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-s003-mgmt"  dev="ipmi:10.254.2.17" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-s002-mgmt"  dev="ipmi:10.254.2.52" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-s001-mgmt"  dev="ipmi:10.254.2.11" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-w003-mgmt"  dev="ipmi:10.254.2.30" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-w002-mgmt"  dev="ipmi:10.254.2.44" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-w001-mgmt"  dev="ipmi:10.254.2.8" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-m003-mgmt"  dev="ipmi:10.254.2.40" ipmiopts="U:root,P:initial0,W:solpayloadsize"
-console name="ncn-m002-mgmt"  dev="ipmi:10.254.2.10" ipmiopts="U:root,P:initial0,W:solpayloadsize"
+console name="uan01-mgmt"     dev="ipmi:10.254.2.26" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="nid000001-mgmt" dev="ipmi:10.254.2.6" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="nid000002-mgmt" dev="ipmi:10.254.2.3" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="nid000003-mgmt" dev="ipmi:10.254.2.20" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="nid000004-mgmt" dev="ipmi:10.254.2.19" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-s003-mgmt"  dev="ipmi:10.254.2.17" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-s002-mgmt"  dev="ipmi:10.254.2.52" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-s001-mgmt"  dev="ipmi:10.254.2.11" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-w003-mgmt"  dev="ipmi:10.254.2.30" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-w002-mgmt"  dev="ipmi:10.254.2.44" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-w001-mgmt"  dev="ipmi:10.254.2.8" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-m003-mgmt"  dev="ipmi:10.254.2.40" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
+console name="ncn-m002-mgmt"  dev="ipmi:10.254.2.10" ipmiopts="U:root,P:VERYSECRETPASSWORD,W:solpayloadsize"
