MTL-1396 use updated theme and add docs for cray site init
Signed-off-by: Jacob Salmela <jacob.salmela@hpe.com>

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -9,7 +9,7 @@ source "https://rubygems.org"
 # Happy Jekylling!
 gem "jekyll", "~> 3.9.0"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem "minima", "~> 2.5"
+gem "minimal", "~> 0.0.26"
 group :jekyll_plugins do
   gem 'jekyll-feed', '~> 0.12'
   gem 'jekyll-remote-theme'
