--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,6 +15,14 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
+      - name: setup go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.16"
+
+      - name: makedocs
+        run: go run main.go makedocs ./hugo/content/commands
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
