--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,3 +10,9 @@ cmd/pitdata.go      jacob.salmela@hpe.com
 cmd/populate.go     jacob.salmela@hpe.com
 cmd/validate.go     jacob.salmela@hpe.com
 write-livecd.sh     jacob.salmela@hpe.com
+
+cmd/handoff.go                          sean.wallace@hpe.com
+cmd/handoff-bss-metadata.go             sean.wallace@hpe.com
+cmd/handoff-bss-update_cloud-init.go    sean.wallace@hpe.com
+cmd/handoff-bss-update_param.go         sean.wallace@hpe.com
+cmd/handoff-bss-update_param.go         sean.wallace@hpe.com
