CASMINST-4116: Adjust ifname parameters for masters and storage with 2 NICs

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ coverage*
 build/
 cmd/*/*
 dist/
+cmd/application_node_config.yaml
+cmd/hmn_connections.json
+cmd/ncn_metadata.csv
+cmd/switch_metadata.csv
