--- a/testdata/expected/application_node_config.yaml
+++ b/testdata/expected/application_node_config.yaml
@@ -1,18 +1,11 @@
 ---
 # Additional application node prefixes to match in the hmn_connections.json file
-prefixes:
-  - lnet
+prefixes: []
 
 # Additional HSM SubRoles
-prefix_hsm_subroles:
-  lnet: LNETRouter
+prefix_hsm_subroles: {}
 
 # Application Node aliases
 aliases:
-  x3000c0s17b0n0: ["uan001"]
-  x3000c0s18b0n0: ["uan002"]
-  x3000c0s19b0n0: ["uan003"]
-  x3000c0s21b0n0: ["uan004"]
-  x3000c0s25b0n0: ["uan006"]
-  x3000c0s27b0n0: ["lnet01"]
-  x3000c0s29b0n0: ["uan000"]
+  x3000c0s15b0n0: ["uan001"]
+  x3000c0s16b0n0: ["uan002"]
