--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -37,7 +37,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: run shellcheck
-      uses: ludeeus/action-shellcheck@1.1.0
+      uses: ludeeus/action-shellcheck@master
       with:
         severity: error
-        ignore: vendor
+        ignore_paths: vendor
