CASMINST-4794: Correct misspellings in output strings, code comments, etc
(cherry picked from commit ea39a2b9ec13235e0bdde459b67c3c760c518b2e)

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -30,7 +30,7 @@ disableShortcutsTitle = true
 # If set to false, a Home button will appear below the search bar on the menu.
 # It is redirecting to the landing page of the current language if specified. (Default is "/")
 disableLandingPageButton = true
-# When using mulitlingual website, disable the switch language button.
+# When using multilingual website, disable the switch language button.
 disableLanguageSwitchingButton = false
 # Hide breadcrumbs in the header and only show the current page title
 disableBreadcrumb = false
