--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,21 +1,21 @@
-.github/            @Cray-HPE/metal
-*                   @Cray-HPE/metal
-pkg/pit             @Cray-HPE/metal
-pkg/csi             @Cray-HPE/metal
-pkg/version         @Cray-HPE/metal
-cmd/cow.go          jacob.salmela@hpe.com
-cmd/get.go          jacob.salmela@hpe.com
-cmd/format.go       jacob.salmela@hpe.com
-cmd/init.go         jacob.salmela@hpe.com
-cmd/makedocs.go     jacob.salmela@hpe.com
-cmd/pit.go          jacob.salmela@hpe.com
-cmd/pitdata.go      jacob.salmela@hpe.com
-cmd/populate.go     jacob.salmela@hpe.com
-cmd/validate.go     jacob.salmela@hpe.com
-write-livecd.sh     jacob.salmela@hpe.com
+.github/                                @Cray-HPE/metal
+*                                       @Cray-HPE/metal
+pkg/pit                                 @Cray-HPE/metal
+pkg/csi                                 @Cray-HPE/metal
+pkg/version                             @Cray-HPE/metal
+cmd/cow.go                              @Cray-HPE/metal
+cmd/get.go                              @Cray-HPE/metal
+cmd/format.go                           @Cray-HPE/metal
+cmd/init.go                             @Cray-HPE/metal
+cmd/makedocs.go                         @Cray-HPE/metal
+cmd/pit.go                              @Cray-HPE/metal
+cmd/pitdata.go                          @Cray-HPE/metal
+cmd/populate.go                         @Cray-HPE/metal
+cmd/validate.go                         @Cray-HPE/metal
+write-livecd.sh                         @Cray-HPE/metal
 
-cmd/handoff.go                          sean.wallace@hpe.com
-cmd/handoff-bss-metadata.go             sean.wallace@hpe.com
-cmd/handoff-bss-update_cloud-init.go    sean.wallace@hpe.com
-cmd/handoff-bss-update_param.go         sean.wallace@hpe.com
-cmd/handoff-bss-update_param.go         sean.wallace@hpe.com
+cmd/handoff.go                          @Cray-HPE/hardware-management
+cmd/handoff-bss-metadata.go             @Cray-HPE/hardware-management
+cmd/handoff-bss-update_cloud-init.go    @Cray-HPE/hardware-management
+cmd/handoff-bss-update_param.go         @Cray-HPE/hardware-management
+cmd/handoff-bss-update_param.go         @Cray-HPE/hardware-management
