--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
   test:
     name: Lint and Unit Tests
-    runs-on: redbull
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
@@ -25,6 +25,7 @@ jobs:
 
     - name: Lint
       run: |
+        make tools
         make lint
 
     - name: Test
