Pages workflow using wrong Go version
Was using Go 1.16 and failing, should be using Go 1.19 anyway to align
with the rest of the CSI codebase. Using 1.19 fixed the page workflow.

Use latest hugo version.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,7 +18,7 @@ jobs:
       - name: setup go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.16"
+          go-version: "1.19"
 
       - name: makedocs
         run: go run main.go makedocs ./hugo/content/commands
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.88.1'
+          hugo-version: 'latest'
           # extended: true
 
       - name: Build
