--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Lint
 
 on:
   push:
@@ -8,12 +8,14 @@ on:
       # semver tags:
       - 'v[12].[0-9]+.[0-9]+'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - 'release/**'
 
 jobs:
 
   test:
-    name: Lint and Unit Tests
+    name: Lint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,6 +29,3 @@ jobs:
       run: |
         make tools
         make lint
-
-    - name: Test
-      run: make test
