Fix Hugo workflow
Fixes the Hugo workflow, calling `main.go` from it's new location.

Also includes a full set of regenerated content pages.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,7 +22,7 @@ jobs:
           go-version: "1.19"
 
       - name: makedocs
-        run: go run main.go makedocs ./hugo/content/commands
+        run: go run cmd/csi/main.go makedocs ./hugo/content/commands
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
