--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,13 +19,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: 1.23
 
-    - name: Lint
-      run: |
-        make tools
-        make lint
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v8
+      with:
+        args: --max-same-issues=0
+        only-new-issues: true
