--- a/testdata/expected/application_node_config.yaml
+++ b/testdata/expected/application_node_config.yaml
@@ -1,23 +1,22 @@
----
 # Additional application node prefixes to match in the hmn_connections.json file
 prefixes:
-    - uan
-    - gn
+  - uan
+  - gn
 
 # Additional HSM SubRoles
 prefix_hsm_subroles:
-    uan: UAN
-    gn: Gateway
+  uan: UAN
+  gn: Gateway4
 
 # Application Node aliases
 aliases:
-    x3000c0s17b0n0: ["uan01"]
-    x3000c0s18b0n0: ["uan02"]
-    x3000c0s19b0n0: ["uan03"]
-    x3000c0s21b0n0: ["uan04"]
-    x3000c0s23b0n0: ["gateway01"]
-    x3000c0s24b0n0: ["gateway02"]
-    x3000c0s25b0n0: ["uan06"]
-    x3000c0s27b0n0: ["gateway03"]
-    x3000c0s28b0n0: ["gateway04"]
-    x3000c0s29b0n0: ["gateway05"]
+  x3000c0s17b0n0: ["uan01"]
+  x3000c0s18b0n0: ["uan02"]
+  x3000c0s19b0n0: ["uan03"]
+  x3000c0s21b0n0: ["uan04"]
+  x3000c0s23b0n0: ["gateway01"]
+  x3000c0s24b0n0: ["gateway02"]
+  x3000c0s25b0n0: ["uan06"]
+  x3000c0s27b0n0: ["gateway03"]
+  x3000c0s28b0n0: ["gateway04"]
+  x3000c0s29b0n0: ["gateway05"]
