Update / Fix GitHub Page Workflow
The current GitHub pages workflow is broken and out-of-date.

This changes the GitHub pages workflow from GitHub Branch deployments to GitHub Actions deployments.

The pages workflow was updated to use Go 1.24 with Hugo 0.148.1, copying the new workflow suggestion from: https://gohugo.io/host-and-deploy/host-on-github-pages/.

The `hugo/content/commands` pages were removed and are now ignored in `.gitignore`, these files are generated on-build, and we do not need to maintain them in the repo.

`.gitignore` now ignores `docs/` and `.hugo_build.lock` files (generated/temp files from hugo).

--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -1,8 +1,13 @@
 baseURL = "https://cray-hpe.github.io/cray-site-init/"
-languageCode = "en-us"
-title = "Cray Site Init"
-theme = "learn"
 publishDir = "../docs"
+title = "Cray Site Init"
+
+defaultContentLanguage = 'en'
+[languages]
+[languages.en]
+languageCode = 'en'
+languageName = 'English'
+weight = 1
 
 # [outputs]
 #   home = ["HTML", "RSS", "JSON"]
@@ -48,3 +53,7 @@ themeVariant = "blue"
 custom_css = ["css/foo.css", "css/bar.css"]
 # Change the title separator. Default to "::".
 titleSeparator = "-"
+
+[caches]
+[caches.images]
+dir = ':cacheDir/images'
