Group k8s updates together
Allow dependabot to make a single PR for all k8s updates.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,10 @@ updates:
     labels:
       - "gomod"
       - "dependencies"
+    groups:
+      k8s-dependencies:
+        patterns:
+          - k8s.io/*
   - package-ecosystem: "github-actions"
     # Look for `.github/workflows` in the `root` directory
     directory: "/"
